# Data3GC

./: #log.txt#  .gitignore  bench_log.txt  bench_name.npy  fitslist.npy  log.txt  main.py  ndarray_bench.npy  nfacetslist.npy  pyproject.toml  test_labels.npy  xarray_bench.npy
docs/: memo.txt
docs/source/: conf.py  data3gc.rst  index.rst  modules.rst
src/data3gc/: Jones.py  sky.py  sky_ndarray.py  sky_xarray_bkp.py
src/src/data3gc/: sky.py
tests/: benchmark.py  test_json_serialization.py  test_sky.py  test_sky_ndarray.py
tests/Data/: M31-lowres-LOFAR-cropped-1.fits  M31-lowres-LOFAR-cropped.fits
